--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Tea Shop</title>
 </head>
 <body>
-    
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+        <header class="flex pt-10 mb-20">
+            <div>
+                <h1 class="text-5xl md:text-7xl">It's good <br>tea time at the <br>Tea Shop</h1>
+                <p>Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+                <button>Explore More <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </header>
+    </main>
 </body>
 </html>
