Featured Products Section add

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
       <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
-          <header class="flex pt-10 mb-20">
+          <header class="lg:flex pt-10 mb-20">
               <div>
                   <h1 class="text-5xl md:text-7xl">
                     It's good<br>tea time at the<br>Tea Shop
@@ -49,7 +49,7 @@
                   <img class="w-full" src="assets/images/banner.png" alt="">
                 </div>
                 <!-- card -->
-                <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:left-32 lg:left-28">
+                <div class=" absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-30 md:left-32 lg:left-28">
                   <div>
                     <i class="fa-solid fa-star text-amber-500"></i>
                   </div>
@@ -60,6 +60,43 @@
                 </div>
               </div>
           </header>
+
+          <section class="py-8 lg:py-24">
+            <div class="text-center">
+              <h1 class="text-3xl md:text-4xl font-bold mb-2">Our Featured Products</h1>
+              <p class="text-gray-600 mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized words which don't look even slightly believable. </p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+              <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="assets/images/tea-1.png" alt="">
+                <div class="p-4 text-center">
+                  <h2 class="font-bolt text-xl">Green Tea</h2>
+                  <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="assets/images/tea-2.png" alt="">
+                <div class="p-4 text-center">
+                  <h2 class="font-bolt text-xl">Milk Tea</h2>
+                  <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="assets/images/tea-3.png" alt="">
+                <div class="p-4 text-center">
+                  <h2 class="font-bolt text-xl">Lemon Tea</h2>
+                  <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+              <div class="rounded-lg shadow-md bg-gray-50 overflow-hidden">
+                <img class="mx-auto pt-4" src="assets/images/tea-4.png" alt="">
+                <div class="p-4 text-center">
+                  <h2 class="font-bolt text-xl">Black Tea</h2>
+                  <p class="text-gray-600">Creamer could be replaced by fresh milk</p>
+                </div>
+              </div>
+            </div>
+          </section>
       </main>
   </body>
 </html>
